<?xml version="1.0"?>
<package>
  <name>sr_sample_python_node</name>
  <version>0.0.1</version>
  <description>The sr-sample-python-node package</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>GPL</license>

  <url type="repository">https://github.com/shadow-robot/build-servers-check</url>
  <url type="bugtracker">https://github.com/shadow-robot/build-servers-check/issues</url>

  <author>Andriy Petlovanyy</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>sr_sample_python_library</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>sr_sample_python_library</run_depend>
  <run_depend>rospy</run_depend>

</package>
